--- a/evaluacion.html
+++ b/evaluacion.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Guía del Estudiante - Evaluación</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/evaluacion.css">
 </head>
+
 <body>
+
+  <header class="text-dark text-center py-5">
+    <div class="contenedor">
+      <h1 class="display-5">Evaluación de conocimientos</h1>
+      <p class="lead">Comprobá lo que aprendiste hasta ahora respondiendo estas preguntas.</p>
+    </div>
+  </header>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Guía Web</a>
@@ -16,16 +27,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a><li>
-          <li class="nav-item"><a class="nav-link" href="temario.htmlx">Temario</a><li>
-          <li class="nav-item"><a class="nav-link active" href="evaluación.html">Evaluación</a><li>
-        <ul>
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a>
+          <li>
+          <li class="nav-item"><a class="nav-link" href="temario.htmlx">Temario</a>
+          <li>
+          <li class="nav-item"><a class="nav-link active" href="evaluación.html">Evaluación</a>
+          <li>
+        </ul>
       </div>
     </div>
-  <nav>
+  </nav>
 
-  <article class="bg-white shadow rounded p-4">
   <main class="container my-5">
+    <article class="bg-white shadow rounded p-4">
       <h2>Formulario de Evaluación</h2>
       <forms>
         <div class="mb-4">
@@ -33,7 +47,8 @@
           <input type="text" class="form-control" placeholder="Escribí tu respuesta...">
         </div>
         <div class="mb-4">
-          <label class="form-label fw-bold">2. ¿Qué propiedad de CSS se utiliza para cambiar el color de fondo?</label>
+          <label class="form-label fw-bold">2. ¿Qué propiedad de CSS se utiliza para cambiar el color de
+            fondo?</label>
           <input type="text" class="form-control" placeholder="Escribí tu respuesta...">
         </div>
         <div class="mb-4">
@@ -47,17 +62,11 @@
     </article>
   </main>
 
-  <header class="text-dark text-center py-5">
-    <div class="contenedor">
-      <h1 class="display-5">Evaluación de conocimientos</h1>
-      <p class="lead">Comprobá lo que aprendiste hasta ahora respondiendo estas preguntas.</p>
-    </div>
-  <header>
-
   <footer class="bg-light text-center py-3 mt-auto">
     <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
   </footer>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
