--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Guía del Estudiante - Inicio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/index.css">
 </head>
+
 <body class="d-flex flex-column min-vh-100">
+  <header class="text-white text-center py-5">
+    <div class="container">
+      <h1 class="display-5">Guía del Estudiante de Programación Web</h1>
+      <p class="lead">Aprendé HTML, CSS, JavaScript y Bootstrap desde cero</p>
+    </div>
+  </header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Guía Web</a>
@@ -21,14 +30,16 @@
         <li class="nav-item"><a class="nav-link" href="temario.html">Temario</a></li>
         <li class="nav-item"><a class="nav-link" href="evaluacion.html">Evaluación</a></li>
       </div>
-    </nav>
     </div>
+  </nav>
 
   <main class="container my-5">
     <article class="bg-white shadow rounded p-4">
       <section class="mb-5">
         <h2>¿Qué es la Programación Web?</h2>
-        <p>La programación web es el conjunto de técnicas y tecnologías que permiten crear sitios y aplicaciones que funcionan en navegadores. Incluye el diseño visual, la estructura del contenido, la interacción con el usuario y la conexión con servidores.</p>
+        <p>La programación web es el conjunto de técnicas y tecnologías que permiten crear sitios y aplicaciones que
+          funcionan en navegadores. Incluye el diseño visual, la estructura del contenido, la interacción con el usuario
+          y la conexión con servidores.</p>
       </section>
 
       <section class="mb-5">
@@ -69,37 +80,31 @@
         </div>
       </section>
 
-      
+      <section class="mb-5">
+        <h3>¿Cómo utilizar esta guía?</h3>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Explorá el <strong>temario</strong> para conocer los temas principales.</li>
+          <li class="list-group-item">Practicá con ejemplos y desafíos cortos.</li>
+          <li class="list-group-item">Probá tus conocimientos en la <strong>evaluación</strong> interactiva.</li>
+          <li class="list-group-item">Consultá recursos externos recomendados.</li>
+        </ul>
+      </section>
+
+      <section>
+        <h3>Requisitos</h3>
+        <p>No necesitás conocimientos previos. Solo necesitás una computadora, navegador y muchas ganas de aprender.</p>
+      </section>
+
     </article>
-  <main>
-  <section class="mb-5">
-    <h3>¿Cómo utilizar esta guía?</h3>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Explorá el <strong>temario</strong> para conocer los temas principales.</li>
-      <li class="list-group-item">Practicá con ejemplos y desafíos cortos.</li>
-      <li class="list-group-item">Probá tus conocimientos en la <strong>evaluación</strong> interactiva.</li>
-      <li class="list-group-item">Consultá recursos externos recomendados.</li>
-    </ul>
-  </section>
-
-  <seccion>
-    <h3>Requisitos</h3>
-    <p>No necesitás conocimientos previos. Solo necesitás una computadora, navegador y muchas ganas de aprender.</p>
-  </section>
-
-  <header class="text-white text-center py-5">
-    <div class="container">
-      <h1 class="display-5">Guía del Estudiante de Programación Web</h1>
-      <p class="lead">Aprendé HTML, CSS, JavaScript y Bootstrap desde cero</p>
-    </div>
-  </headr>
+  </main>
 
   <footer class="bg-light text-center py-3 mt-auto">
     <div class="container">
       <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
-      <footer>
-   </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
