--- a/temario.html
+++ b/temario.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Guía del Estudiante - Temario</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/temario.css">
 </head>
+
 <body class="flex-column min-vh-50">
   <header class="text-white text-center py-5">
     <div class="container">
       <h1 class="display-5">Temario del Curso</h1>
       <p class="lead">Explorá los temas fundamentales para convertirte en desarrollador web</p>
-    </header>
-  </div>
+    </div>
+  </header>
 
   <navbar class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
@@ -44,59 +47,70 @@
             </h2>
             <div id="collapseHTML" class="accordion-collapse collapse show">
               <p class="accordion-body">
-                Aprende a estructurar páginas web utilizando etiquetas semánticas como <code>&lt;header&gt;</code>, <code>&lt;main&gt;</code>, <code>&lt;article&gt;</code> y más. Conocé las mejores prácticas para una web accesible.
+                Aprende a estructurar páginas web utilizando etiquetas semánticas como <code>&lt;header&gt;</code>,
+                <code>&lt;main&gt;</code>, <code>&lt;article&gt;</code> y más. Conocé las mejores prácticas para una web
+                accesible.
               </p>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingCSS">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCSS">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseCSS">
                 CSS: Estilos y Diseño Visual
               </button>
             </h2>
             <div id="collapseCSS" class="accordion-collapse collapse">
               <p class="accordion-body">
-                Aplicá estilos a tus sitios web con propiedades como <code>color</code>, <code>font-size</code>, <code>margin</code> y <code>padding</code>. Aprendé sobre <strong>selectores</strong>, <strong>clases</strong> y <strong>responsividad</strong>.
+                Aplicá estilos a tus sitios web con propiedades como <code>color</code>, <code>font-size</code>,
+                <code>margin</code> y <code>padding</code>. Aprendé sobre <strong>selectores</strong>,
+                <strong>clases</strong> y <strong>responsividad</strong>.
               </p>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingJS">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseJS">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseJS">
                 JavaScript: Interactividad Básica
               </button>
             </h2>
             <div id="collapseJS" class="accordion-collapse collapse">
               <p class="accordion-body">
-                Incorporá lógica a tus sitios con JavaScript. Aprendé a manipular el DOM, responder a eventos y mostrar mensajes interactivos en pantalla.
+                Incorporá lógica a tus sitios con JavaScript. Aprendé a manipular el DOM, responder a eventos y mostrar
+                mensajes interactivos en pantalla.
               </p>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingBootstrap">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBootstrap">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseBootstrap">
                 Bootstrap: Maquetación Moderna
               </button>
             </h2>
             <div id="collapseBootstrap" class="accordion-collapse collapse">
               <p class="accordion-body">
-                Descubrí cómo utilizar el framework Bootstrap para diseñar interfaces responsivas rápidamente usando clases como <code>.container</code>, <code>.row</code>, <code>.col</code>, y componentes como botones, tarjetas y acordeones.
+                Descubrí cómo utilizar el framework Bootstrap para diseñar interfaces responsivas rápidamente usando
+                clases como <code>.container</code>, <code>.row</code>, <code>.col</code>, y componentes como botones,
+                tarjetas y acordeones.
               </p>
             </div>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <section class="text-center">
         <a href="evaluasion.html" class="btn btn-success mt-4">Ir a la Evaluación</a>
-      </article>
-    </section>
+      </section>
+    </article>
   </main>
 
   <footer class="bg-light text-center py-3">
     <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
-  </futer>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
