--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   </header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Guía Web</a>
+      <a class="navbar-brand" href="index.html">Guía Web</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="temario.html">Temario</a></li>
+          <li class="nav-item"><a class="nav-link" href="evaluacion.html">Evaluación</a></li>
         </ul>
-        <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="temario.html">Temario</a></li>
-        <li class="nav-item"><a class="nav-link" href="evaluacion.html">Evaluación</a></li>
       </div>
     </div>
   </nav>
