Se unifico el color del pie de pagina del mismo que utiliza la barra de navegacion

--- a/evaluacion.html
+++ b/evaluacion.html
@@ -62,8 +62,8 @@
     </article>
   </main>
 
-  <footer class="bg-light text-center py-3 mt-auto">
-    <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
+  <footer class="bg-dark text-center py-3 mt-auto">
+    <p class="mb-0 text-white">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
   </footer>
 
 </body>
