--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </article>
   </main>
 
-  <footer class="bg-light text-center py-3 mt-auto">
+  <footer class="bg-dark text-center py-3 mt-auto">
     <div class="container">
-      <p class="mb-0">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
+      <p class="mb-0 text-white">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
     </div>
   </footer>
 
