--- a/evaluacion.html
+++ b/evaluacion.html
@@ -4,14 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--  ==== Titulo de la pagina ==== -->
   <title>Guía del Estudiante - Evaluación</title>
+  <!--  ==== Estilos Bootstrap ==== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <!--  ==== Estilos personalizados ==== -->
   <link rel="stylesheet" href="assets/css/evaluacion.css">
 </head>
 
 <body>
 
+  <!--  ==== Header ==== -->
   <header class="text-dark text-center py-5">
     <div class="contenedor">
       <h1 class="display-5">Evaluación de conocimientos</h1>
@@ -19,6 +23,7 @@
     </div>
   </header>
 
+  <!--  ==== Barra de navegación ==== -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Guía Web</a>
@@ -38,9 +43,14 @@
     </div>
   </nav>
 
+  <!--  ==== Contenido principal ==== -->
   <main class="container my-5">
+
+    <!--  ==== Acticulo ==== -->
     <article class="bg-white shadow rounded p-4">
       <h2>Formulario de Evaluación</h2>
+
+      <!--  ==== Formulario ==== -->
       <forms>
         <div class="mb-4">
           <label class="form-label fw-bold">1. ¿Qué etiqueta se usa para crear un enlace?</label>
@@ -62,11 +72,13 @@
     </article>
   </main>
 
+  <!--  ==== Footer ==== -->
   <footer class="bg-dark text-center py-3 mt-auto">
     <p class="mb-0 text-white">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
   </footer>
 
+  <!--  ==== Script Bootstrap ==== -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
