--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--  ==== Titulo de la pagina ==== -->
   <title>Guía del Estudiante - Inicio</title>
+  <!--  ==== Estilos Bootstrap ==== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <!--  ==== Estilos personalizados ==== -->
   <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
+
+  <!--  ==== Header ==== -->
   <header class="text-white text-center py-5">
     <div class="container">
       <h1 class="display-5">Guía del Estudiante de Programación Web</h1>
       <p class="lead">Aprendé HTML, CSS, JavaScript y Bootstrap desde cero</p>
     </div>
   </header>
+
+  <!--  ==== Barra de navegación ==== -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">Guía Web</a>
@@ -33,8 +40,13 @@
     </div>
   </nav>
 
+  <!--  ==== Contenido principal ==== -->
   <main class="container my-5">
+
+    <!--  ==== Articulo ==== -->
     <article class="bg-white shadow rounded p-4">
+
+      <!--  ==== Seccion 1 ==== -->
       <section class="mb-5">
         <h2>¿Qué es la Programación Web?</h2>
         <p>La programación web es el conjunto de técnicas y tecnologías que permiten crear sitios y aplicaciones que
@@ -42,6 +54,7 @@
           y la conexión con servidores.</p>
       </section>
 
+      <!--  ==== Seccion 2 ==== -->
       <section class="mb-5">
         <h3>¿Qué aprenderás en esta guía?</h3>
         <div class="row text-center">
@@ -80,6 +93,7 @@
         </div>
       </section>
 
+      <!--  ==== Seccion 3 ==== -->
       <section class="mb-5">
         <h3>¿Cómo utilizar esta guía?</h3>
         <ul class="list-group list-group-flush">
@@ -90,6 +104,7 @@
         </ul>
       </section>
 
+      <!--  ==== Seccion 4 ==== -->
       <section>
         <h3>Requisitos</h3>
         <p>No necesitás conocimientos previos. Solo necesitás una computadora, navegador y muchas ganas de aprender.</p>
@@ -97,13 +112,14 @@
 
     </article>
   </main>
-
+  <!--  ==== Footer ==== -->
   <footer class="bg-dark text-center py-3 mt-auto">
     <div class="container">
       <p class="mb-0 text-white">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
     </div>
   </footer>
 
+  <!--  ==== Script Bootstrap ==== -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
