--- a/temario.html
+++ b/temario.html
@@ -4,13 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--  ==== Titulo de la pagina ==== -->
   <title>Guía del Estudiante - Temario</title>
+  <!--  ==== Estilos Bootstrap ==== -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <!--  ==== Estilos personalizados ==== -->
   <link rel="stylesheet" href="assets/css/temario.css">
 </head>
 
 <body class="flex-column min-vh-50">
+
+  <!--  ==== Header ==== -->
   <header class="text-white text-center py-5">
     <div class="container">
       <h1 class="display-5">Temario del Curso</h1>
@@ -18,7 +23,8 @@
     </div>
   </header>
 
-  <navbar class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <!--  ==== barra de navegación ==== -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">Guía Web</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -32,10 +38,15 @@
         </ul>
       </div>
     </div>
-  </navbar>
+  </nav>
 
+  <!--  ==== Contenido principal ==== -->
   <main class="cotainer my-5">
+
+    <!--  ==== Articulo ==== -->
     <article class="bg-white shadow rounded p-4">
+
+      <!--  ==== Seccion 1 ==== -->
       <section class="mb-5">
         <h2>Contenido de la Guía</h2>
         <div class="accordion" id="temarioAccordion">
@@ -100,16 +111,19 @@
         </div>
       </section>
 
+      <!--  ==== Seccion 2 ==== -->
       <section class="text-center">
         <a href="evaluasion.html" class="btn btn-success mt-4">Ir a la Evaluación</a>
       </section>
     </article>
   </main>
 
+  <!--  ==== Footer ==== -->
   <footer class="bg-dark text-center py-3">
     <p class="mb-0 text-white">&copy; 2025 Guía del Estudiante - Todos los derechos reservados</p>
   </footer>
 
+  <!--  ==== Script Bootstrap ==== -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
